# MultiMediaLearn

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/lx/multimedialearn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/chuwang/: 1.pxy  1.stl  2.pxy  2.stl  3.pxy  3.stl  4.pxy  4.stl  5.pxy  5.stl  6.pxy  6.stl
app/src/main/cpp/: CMakeLists.txt  multi_media.cpp  native-lib.cpp
app/src/main/cpp/ffmpeg/: CMakeLists.txt  ffmpeg_play.cpp  native-live.c  native-player.c  native-rmtp.c  native-video.c  native_live.h  opensl_io.c  opensl_io.h  queue.c  queue.h  queue1.c
app/src/main/cpp/ffmpeg/inc/ffmpeg/libavcodec/: old_codec_ids.h  vdpau.h  version.h
app/src/main/cpp/ffmpeg/inc/ffmpeg/libavdevice/: avdevice.h  version.h
app/src/main/cpp/ffmpeg/inc/ffmpeg/libavfilter/: avfilter.h  buffersrc.h
app/src/main/cpp/ffmpeg/inc/ffmpeg/libavformat/: avformat.h  avio.h  version.h
app/src/main/cpp/ffmpeg/inc/ffmpeg/libavutil/: ffversion.h  pixfmt.h
app/src/main/cpp/ffmpeg/inc/ffmpeg/libpostproc/: postprocess.h
app/src/main/cpp/ffmpeg/inc/ffmpeg/libswresample/: swresample.h
app/src/main/cpp/ffmpeg/inc/libyuv/: convert_argb.h  scale_argb.h
app/src/main/cpp/libyuv/: CMakeLists.txt  yuv_utils.cpp
app/src/main/cpp/libyuv/inc/libyuv/: convert.h  row.h  scale_row.h
app/src/main/cpp/multimedia/: CMakeLists.txt
app/src/main/cpp/opencv/: CMakeLists.txt  OpencvUtils.cpp  Scanner.cpp  Scanner.h  android_utils.cpp  android_utils.h
app/src/main/cpp/voicechange/: CMakeLists.txt  common.cpp  common.h  common_platform.cpp  common_platform.h  dsp_custom.cpp  effects.cpp  play_sound.cpp  voice_changer.cpp
app/src/main/java/com/lx/multimedialearn/: MultiMediaApplication.java
app/src/main/java/com/lx/multimedialearn/bmpstudy/: CustomBmpView.java  DoubleBufferView.java  DrawBmpActivity.java  DrawBmpUtils.java
app/src/main/java/com/lx/multimedialearn/bmpstudy/render/: BmpRender.java
app/src/main/java/com/lx/multimedialearn/bmpstudy/stl/: Model.java  ModelRenderer.java  Point.java  STLReader.java
app/src/main/java/com/lx/multimedialearn/camerastudy/: CameraIndexActivity.java  CameraShareActivity.java  CameraUseActivity.java  DoubleGLSurfaceViewActivity.java  FourGLSurfaceViewActivity.java
app/src/main/java/com/lx/multimedialearn/drawbmp/: CustomBmpView.java  DoubleBufferView.java  DrawBmpActivity.java  DrawBmpUtils.java
app/src/main/java/com/lx/multimedialearn/ffmpegstudy/: FFmpegIndexActivity.java  FFmpegUtils.java
app/src/main/java/com/lx/multimedialearn/main/: MainActivity.java  MainAdapter.java  Parent.java  Son.java  TabModel.java
app/src/main/java/com/lx/multimedialearn/mediastudy/: MediaIndexActivity.java  VoiceChangeActivity.java
app/src/main/java/com/lx/multimedialearn/opencvstudy/: MaskImageView.java  OpenCVActivity.java
app/src/main/java/com/lx/multimedialearn/openglstudy/: OpenGLIndexActivity.java  OpenGLJniUtils.java  OpenGLStudyActivity.java  ParticlesActivity.java
app/src/main/java/com/lx/multimedialearn/player/: VideoPlayerActivity.java
app/src/main/java/com/lx/multimedialearn/usecamera/: CameraShareActivity.java  CameraUseActivity.java  DoubleGLSurfaceViewActivity.java
app/src/main/java/com/lx/multimedialearn/utils/: BitmapUtils.java  CameraUtils.java  CanvasUtils.java  FileUtils.java  GlUtil.java  LOGUtils.java  MathUtils.java  MatrixUtils.java  MediaUtils.java  PermissionUtils.java  ScreenUtils.java  ToastUtils.java  WeakHandler.java  YuvUtils.java
app/src/main/jni/: com_lx_multimedialearn_openglstudy_xbo_pbo_PBORender.h  com_lx_multimedialearn_openglstudy_xbo_pbo_PBORender_onBitmapUpdateListener.h
app/src/main/res/layout/: activity_anim_index.xml  activity_anim_on_camera.xml  activity_audio_recorder.xml  activity_beauty.xml  activity_camera_filter.xml  activity_camera_filter_water.xml  activity_camera_index.xml  activity_camera_share.xml  activity_camera_use.xml  activity_camera_water_mark.xml  activity_double_glsurface_view.xml  activity_draw_bmp.xml  activity_easy_player.xml  activity_fbostudy.xml  activity_ffmpeg_audio.xml  activity_ffmpeg_index.xml  activity_ffmpeg_video.xml  activity_flow_native_mp4.xml  activity_hard_code.xml  activity_image_process.xml  activity_live.xml  activity_load_etc.xml  activity_main.xml  activity_media_codec.xml  activity_media_index.xml  activity_media_mux.xml  activity_media_record.xml  activity_obj_model.xml  activity_obj_mtl.xml  activity_open_cv.xml  activity_open_glindex.xml  activity_open_glrecord.xml  activity_open_glstudy.xml  activity_open_sl.xml  activity_open_sl2.xml  activity_particles.xml  activity_pbo.xml  activity_player_video.xml  activity_stlmodel.xml  activity_vbo.xml  (+3 more)
app/src/main/res/menu/: camera_filter_activity_menu.xml  image_activity_menu.xml
app/src/main/res/raw/: beauty_fragment_shader.glsl  beauty_vertex_shader.glsl  bmp_fragment_shader.glsl  bmp_vertex_shader.glsl  camera_filter_fragment_shader.glsl  camera_filter_vertex_shader.glsl  camera_fragment_shader.glsl  camera_vertex_shader.glsl  camera_water_gray_fragment_shader.glsl  camera_water_gray_vertex_shader.glsl  etc_camera_fragment_shader.glsl  etc_vertex_shader.glsl  gray_fragment_shader.glsl  gray_vertex_shader.glsl  heightmap_fragment_shader.glsl  heightmap_vertex_shader.glsl  last_fragment_shader.glsl  last_vertex_shader.glsl  logo_fragment_shader.glsl  logo_vertex_shader.glsl  lookup_fragment_shader.glsl  lookup_vertex_shader.glsl  obj_fragment_shader.glsl  obj_mtl_fragment_shader.glsl  obj_mtl_vertex_shader.glsl  obj_vertex_shader.glsl  particle_fragment_shader.glsl  particle_vertex_shader.glsl  simple_fragment_shader.glsl  simple_vertex_shader.glsl  skybox_fragment_shader.glsl  skybox_vertex_shader.glsl  texture_fragment_shader.glsl  texture_vertex_shader.glsl  yuv_fragment_shader.glsl  yuv_vertex_shader.glsl
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: wallpaper.xml
app/src/test/java/com/lx/multimedialearn/: ExampleUnitTest.java
distribution/ffmpeg/include/libyuv/: planar_functions.h  (+1 more)
(+145 files in other folders)
